--- a/Day001/Day001.md
+++ b/Day001/Day001.md
@@ -1,6 +1,7 @@
 # Day 001
 
 - [x] Varibles
+
 Once you create a variable using var, you can change it as often as you want without using var again. For example:
 ```
 var favoriteShow = "Orange is the New Black"
@@ -9,3 +10,25 @@ favoriteShow = "Doctor Who"
 ```
 
 - [ ] Srtings and Integers
+
+
+- [ ] Multi-line Strings
+
+
+
+- [] DOubles and Booleans
+
+
+- [] String Interpolation
+
+
+- [] Constants
+
+
+- [] Type Annotations
+
+
+- [] Simple TypesL Summary
+
+
+
