--- a/Day001/Day001.md
+++ b/Day001/Day001.md
@@ -9,7 +9,13 @@ favoriteShow = "The Good Place"
 favoriteShow = "Doctor Who"
 ```
 
-- [ ] Srtings and Integers
+- [x] Srtings and Integers
+
+Swift is what’s known as a type-safe language, which means that every variable must be of one specific type. When you create a variable Swift can figure out what type the variable is based on what kind of data you assign to it, and from then on that variable will always have that one specific type.
+If you have large numbers, Swift lets you use underscores as thousands separators – they don’t change the number, but they do make it easier to read. 
+```
+var population = 8_000_000
+```
 
 
 - [ ] Multi-line Strings
