--- a/Day001/Day001.md
+++ b/Day001/Day001.md
@@ -17,10 +17,24 @@ If you have large numbers, Swift lets you use underscores as thousands separator
 var population = 8_000_000
 ```
 
+- [x] Multi-line Strings
 
-- [ ] Multi-line Strings
-
-
+If you want multi-line strings you need slightly different syntax: start and end with three double quote marks, and the final three quotes must be on a line by themselves, like this:
+```
+var str1 = """
+This goes
+over multiple
+lines
+"""
+```
+If you only want multi-line strings to format your code neatly, and you don’t want those line breaks to actually be in your string, end each line with a \, like this:
+```
+var str2 = """
+This goes \
+over multiple \
+lines
+"""
+```
 
 - [ ] DOubles and Booleans
 
