--- a/Day001/Day001.md
+++ b/Day001/Day001.md
@@ -36,19 +36,36 @@ lines
 """
 ```
 
-- [ ] DOubles and Booleans
+- [x] Doubles and Booleans
 
+We cannot add an integer with a double.
 
-- [ ] String Interpolation
+- [x] String Interpolation
 
+You can place any type of variable inside your string – all you have to do is write a backslash, \, followed by your variable name in parentheses. For example:
+```
+var score = 85
+var str = "Your score was \(score)"
+```
+Swift is capable of placing any kind of data inside string interpolation. The result might not always be useful, but for all of Swift’s basic types – strings, integers, Booleans, etc – the results are great.
+Tip: String interpolation is extremely powerful in Swift. If you’re keen to see just what it can do, check out this more advanced blog post from me: https://www.hackingwithswift.com/articles/178/super-powered-string-interpolation-in-swift-5-0
 
-- [ ] Constants
+- [x] Constants
 
+Swift really loves constants, and in fact will recommend you use one if you created a variable then never changed its value. The reason for this is about avoiding problems: any variable you create can be changed by you whenever you want and as often as you want, so you lose some control – that important piece of user data you stashed away might be removed or replaced at any point in the future.
 
-- [ ] Type Annotations
+- [x] Type Annotations
 
+Why using type annotations:
+1. Swift can’t figure out what type should be used.
+2. You want Swift to use a different type from its default.
+3. You don’t want to assign a value just yet.
 
-- [ ] Simple TypesL Summary
+- [x] Simple TypesL Summary
 
-
-
+You’ve made it to the end of the first part of this series, so let’s summarize.
+1. You make variables using var and constants using let. It’s preferable to use constants as often as possible.
+2. Strings start and end with double quotes, but if you want them to run across multiple lines you should use three sets of double quotes.
+3. Integers hold whole numbers, doubles hold fractional numbers, and booleans hold true or false.
+4. String interpolation allows you to create strings from other variables and constants, placing their values inside your string.
+5. Swift uses type inference to assign each variable or constant a type, but you can provide explicit types if you want.
