--- a/Day002/Day002.md
+++ b/Day002/Day002.md
@@ -16,14 +16,43 @@ let colors2 = Set(["red", "green", "blue", "red", "blue"])
 ```
 This difference between set and array means that sets are more useful for times when you want to say “does this item exist?”
 
-- [ ] Tuples
+- [x] Tuples
 
+Tuples allow you to store several values together in a single value. That might sound like arrays, but tuples are different:
+1. You can’t add or remove items from a tuple; they are fixed in size.
+2. You can’t change the type of items in a tuple; they always have the same types they were created with.
+3. You can access items in a tuple using numerical positions or by naming them, but Swift won’t let you read numbers or names that don’t exist.
+Tuples are created by placing multiple items into parentheses, like this:
+```
+var name = (first: "Taylor", last: "Swift")
+name.0
+name.first
+```
+Tuples store values together in a single value.
 
+- [x] Arrays vs Sets vs Tuples
 
+If you need a specific, fixed collection of related values where each item has a precise position or name, you should use a tuple:
+```
+let address = (house: 555, street: "Taylor Swift Avenue", city: "Nashville")
+```
+If you need a collection of values that must be unique or you need to be able to check whether a specific item is in there extremely quickly, you should use a set:
+```
+let set = Set(["aardvark", "astronaut", "azalea"])
+```
+If you need a collection of values that can contain duplicates, or the order of your items matters, you should use an array:
+```
+let pythons = ["Eric", "Graham", "John", "Michael", "Terry", "Terry"]
+```
 
-- [ ] Arrays vs Sets vs Tuples
+Both tuples and arrays allow us to hold several values in one variable, but tuples hold a fixed set of things that can’t be changed, whereas variable arrays can have items added to them indefinitely.
+Another advantage to tuples is that each value is specifically created by you, so as well as providing a name you also provide a type. So, you could create a tuple like this one:
+```
+var person = (name: "Paul", age: 40, isMarried: true)
+```
+That combines a string, an integer, and a Boolean in a single value, which would be pretty ugly in an array.
 
-
+Dictionaries provide an interesting third case, because they give us some of the name safety of tuples but can grow and change like arrays
 
 
 - [ ] Dictionaries
