--- a/Day002/Day002.md
+++ b/Day002/Day002.md
@@ -32,6 +32,8 @@ Tuples store values together in a single value.
 
 - [x] Arrays vs Sets vs Tuples
 
+arrays keep the order and can have duplicates, sets are unordered and can’t have duplicates, and tuples have fixed values of fixed types inside them.
+
 If you need a specific, fixed collection of related values where each item has a precise position or name, you should use a tuple:
 ```
 let address = (house: 555, street: "Taylor Swift Avenue", city: "Nashville")
@@ -57,7 +59,10 @@ Dictionaries provide an interesting third case, because they give us some of the
 
 - [ ] Dictionaries
 
+When using type annotations, dictionaries are written in brackets with a colon between your identifier and value types. For example, [String: Double] and [String: String].
 
+Dictionaries let us choose a “key” that identifies the item we want to add, whereas arrays just add each item sequentially.
+Like sets, dictionaries don’t store our items with a specific order, so they optimize the way they store items for fast retrieval.
 
 - [ ] Dictionaries Default Values
 
